# mnn-torch

./: .coveragerc  .gitignore  AUTHORS.rst  CHANGELOG.rst  CITATION.cff  CONTRIBUTING.rst  LICENSE  LICENSE.txt  MANIFEST.in  README.md  README.rst  appendix.tex  build_package.py  pyproject.toml  requirements-pypi.txt  setup.cfg  setup.py  tox.ini
data/: devicefixed_data.README.md  fig6_devicefixed_data.README.md  fig6_devicefixed_data.json  publication_summary.json
data/fixtures/: README.md  homeostasis_reduced_datasets.npz  representations_reduced_datasets.npz  temporal_reduced_datasets.npz
data/results/: gate_sweep_results.csv  gate_sweep_results.npy  gate_sweep_summary.json  homeostasis_sample_archive.npz
data/results/dose/: rate_0.00.json  rate_0.20.json  rate_0.40.json
data/results/isolate/: ohmic_device.json  ohmic_fixed.json  pf_device.json  pf_fixed.json
data/results/storerecall/fault-only/: storerecall.npy
data/results/storerecall/ideal-only/: storerecall.npy
data/results/storerecall/pf-healthy/: storerecall.npy
data/results/temporal/cap-conv/: temporal_sweep.npy
data/results/temporal/cap-dense/: temporal_sweep.npy
data/results/temporal/cap-dvsg/: temporal_sweep.npy
data/results/temporal/cap-shd/: temporal_sweep.npy
data/results/temporal/ret-conv-full/: temporal_sweep.npy
data/results/temporal/ret-dense/: temporal_sweep.npy
docs/: conf.py  index.rst
examples/: ITO.ipynb  README.md  biosignal.ipynb  convolution.py  quick_start.py  tutorial.ipynb  tutorial.py  vanilla.py
experiments/: 01_device_and_static.ipynb  02_homeostasis.ipynb  03_temporal_memory.ipynb  04_representations.ipynb  README.md  REPRODUCE.ipynb  REPRODUCE_ALL.ipynb  examples.ipynb  figure_manifest.json  homeostasis.ipynb  temporal_storerecall.ipynb
src/mnn_torch/: __init__.py  data.py  data_loaders.py  devices.py  effects.py  layers.py  models.py  paths.py  training.py  utils.py
tests/: conftest.py  test_execution_plumbing.py  test_reproduction_contract.py
