[project]
name = "mnn-torch"
version = "0.1.0"
description = "Device-grounded memristive spiking neural networks in PyTorch"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10,<3.13"
authors = [
    { name = "Viet Cuong Vu", email = "viet.vu.14@ucl.ac.uk" },
    { name = "Anak Agung Ngurah Arymurti Santosa" },
    { name = "Wing H. Ng" },
    { name = "Adnan Mehonic" },
    { name = "Anthony J. Kenyon" },
]
keywords = ["memristive", "neural-networks", "pytorch", "spiking-neural-networks", "hardware-acceleration", "neuromorphic", "memristor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Framework :: Pytest",
]
dependencies = [
    "numpy>=1.26,<2.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.14.0",
    "snntorch>=0.9.4",
    "torch==2.12.1",
    "torchvision==0.27.1",
]

[project.optional-dependencies]
repro = [
    "ipykernel>=6.29",
    "jupyterlab>=4.2",
    "matplotlib>=3.9",
    "nbclient>=0.10",
    "nbformat>=5.10",
    "umap-learn>=0.5.7",
]
external = [
    "mne>=1.7",
    "tonic>=1.5",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
]
release = [
    "build>=1.3.0",
    "twine>=6.2.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=3.0.0",
    "myst-parser>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/hyperionx/mnn-torch"
Repository = "https://github.com/hyperionx/mnn-torch"
"Bug Tracker" = "https://github.com/hyperionx/mnn-torch/issues"

# PyPI's Windows Torch wheel is CPU-only. Publication runs are CUDA-first, so
# resolve the official CUDA 13.0 wheels on Windows/Linux while retaining the
# official CPU wheel for macOS.
[tool.uv.sources]
torch = [
    { index = "pytorch-cu130", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
]
torchvision = [
    { index = "pytorch-cu130", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mnn_torch"]
exclude = [
    "/data",
    "/uv.lock",
    "/.python-version",
    "/main.py",
]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/experiments",
    "/data/SiO_x-multistate-data.mat",
    "/data/fig6_devicefixed_data.json",
    "/data/fig6_devicefixed_data.README.md",
    "/data/results/homeostasis_sample_archive.npz",
    "/data/fixtures/homeostasis_reduced_datasets.npz",
    "/data/fixtures/temporal_reduced_datasets.npz",
    "/data/fixtures/representations_reduced_datasets.npz",
    "/data/fixtures/README.md",
    "/README.md",
    "/LICENSE",
    "/CITATION.cff",
    "/pyproject.toml",
]

# Development tools configuration
[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["mnn_torch"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/mnn_torch",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU",
    "integration: marks tests as integration tests",
]
